# sprat

./: .coveragerc  .gitignore  README.rst  common-prefix  fetch.py  index.py  pack.py  pyproject.toml  pytest.ini  test_sprat.py
.github/workflows/: sync.yml  test.yml
sprat/: __init__.py  __main__.py  _database.py  _index.py  _sprat.bash  _sprat.fish
tests/: requirements.txt  test_cli.py  test_database.py  test_pack_sanitization.py  test_sync.py  test_update.py
tests/1/: ChromePasswordsStealer-13517739.json  InclusionMap-27167459.json  StreamingCommunity-27201792.json  ZombieAdventure-1148304.json  academy-0.json  airbyte-source-tplcentral-27244187.json  arcplot-22421831.json  atimer-24362213.json  benchmark-runner-27289372.json  binarylane-cli-17795909.json  cmip_ref_metrics_example-27258305.json  cricketstats-20526628.json  curvanato-26394100.json  disnake-dyn-components-26808204.json  docker-bash-volume-watcher-3560430.json  evoc-26431830.json  fbgemm-gpu-nightly-genai-27279099.json  fernetfile-27288658.json  flask-openapi3-scalar-27215132.json  fprime-fpp-to-json-26437240.json  h3pandas-20737606.json  holamundoplayerversionkeilor-23511957.json  item-matching-26976007.json  just-semantic-search-scholar-27214902.json  lazydock-26700835.json  letschatty-27250144.json  marimo-27286305.json  marimo-base-27286294.json  miracle-helper-26998614.json  moyopy-27272938.json  nonebot-plugin-sanyao-25874116.json  ofxstatement-intesasp-18081006.json  otoolbox-27262342.json  owlsight-27236845.json  pii-Scanner-27278013.json  pozalabs-compose-26937298.json  pyftms-26420683.json  (+19 more)
(+219 files in other folders)
